# etsy-order-map

./: README.md  index.html  package-lock.json  package.json
scripts/: bump-version.js  gen-sample.cjs  install-hooks.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: BaseMapToggle.jsx  CollapsibleSection.jsx  ColumnMapper.jsx  DateRangeFilter.jsx  DropZone.jsx  ExportButtons.jsx  FileList.jsx  GlobeLayerControls.jsx  GlobeView.jsx  HeatGradientPicker.jsx  Legend.jsx  OriginInput.jsx  PaymentsView.jsx  ScaleSwitcher.jsx  StatCards.jsx  StyleSwitcher.jsx  TopStatesPanel.jsx  ZipDetailPopup.jsx
src/data/: sample-bricklink.csv  sample-ebay.csv  sample-orders.csv  sample-poshmark.csv  zipCentroids.json
src/mapStyles/: arcs.jsx  bubbles.jsx  heatGradients.js  heatmap.js  index.js  pushpins.jsx  treasure.jsx
src/utils/: exportMap.js  openFile.js  parseCsv.js  useLodData.js
