[package]
name = "etsy-order-map"
version = "0.3.7"
description = "Map Etsy customer orders to a ZIP code heatmap"
authors = ["Glenn-castshadow"]
license = "MIT"
repository = "https://github.com/Glenn-castshadow/etsy-order-map"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
